fixed card corners
styled cards with overflow: hidden to fix the issue of the top corners overlapping the card border

--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,35 @@
-:root {
-    --bs-primary: #ffea6c;
-
-    --bs-secondary: rgba(255, 255, 255, 0.4);
-    --bs-success: #41d7a7;
-    --bs-info: #39cbfb;
-    --bs-warning: #ffc107;
-    --bs-danger: #fd7e14;
-    --bs-light: #e9e9e8;
-    /* --bs-dark: #212529; */
-    --bs-dark: #000a49;
-}
-
 body{
     /* background-color: #fff5b6; */
     background-color: #fffef8;
+    color: #000a49;
     
 }
+
+.navbar {
+    background-color: #ffea6c;
+}
+
+.first-row {
+    background-color: #89ffcc;
+}
+
+.second-row {
+    background-color: #ffea6c ;
+}
+
+.third-row {
+    background-color: #ff9a55 ;
+}
+
+a {
+    color: #000a49;
+}
+
+.donate-again {
+    text-decoration: none;
+}
+
+.card {
+    overflow: hidden;
+}
+
